--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
-    "luxon": "^3.7.1",
     "axios": "^1.10.0",
+    "js-cookie": "^3.0.5",
+    "luxon": "^3.7.1",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.5.17",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/luxon": "^3.6.2",
     "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^6.0.0",
